--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,9 @@ bind r source-file ~/.tmux.conf \; display "reloaded!"
 # splitting panes with | and -
 bind | split-window -h
 bind - split-window -v
+# split pane and retain the current directory of existing pane
+bind _ split-window -v -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
 
 # moving between panes with Prefix h,j,k,l
 bind h select-pane -L
@@ -37,9 +40,17 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-set -g mouse off
+set -g mouse on
+# enable vi keys.
+setw -g mode-keys vi
 
 
+bind Escape copy-mode
+bind-key -Tcopy-mode-vi v   send -X begin-selection
+bind-key -Tcopy-mode-vi C-v send -X begin-selection \; send -X rectangle-toggle
+bind-key -Tcopy-mode-vi y   send -X copy-selection-and-cancel
+unbind p
+bind p paste-buffer
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
@@ -47,3 +58,7 @@ set -g default-terminal "screen-256color"
 
 # set colors for the active window
 setw -g window-status-current-style fg=white,bold,bg=red
+
+
+# shortcut for synchronize-panes toggle
+bind C-s set-window-option synchronize-panes
